--- a/index.html
+++ b/index.html
@@ -2,11 +2,122 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HI, HERO!</title>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+    <!--<![endif]-->
+    <style type="text/css">
+    .custom-wrapper {
+        background-color: #ffd390;
+        margin-bottom: 1em;
+        -webkit-font-smoothing: antialiased;
+        height: 2.1em;
+        overflow: hidden;
+        -webkit-transition: height 0.5s;
+        -moz-transition: height 0.5s;
+        -ms-transition: height 0.5s;
+        transition: height 0.5s;
+    }
+
+    .custom-wrapper.open {
+        height: 14em;
+    }
+
+    .custom-menu-3 {
+        text-align: right;
+    }
+
+    .custom-toggle {
+        width: 34px;
+        height: 34px;
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: none;
+    }
+
+    .custom-toggle .bar {
+        background-color: #777;
+        display: block;
+        width: 20px;
+        height: 2px;
+        border-radius: 100px;
+        position: absolute;
+        top: 18px;
+        right: 7px;
+        -webkit-transition: all 0.5s;
+        -moz-transition: all 0.5s;
+        -ms-transition: all 0.5s;
+        transition: all 0.5s;
+    }
+
+    .custom-toggle .bar:first-child {
+        -webkit-transform: rotate(-90px);
+        -moz-transform: rotate(-90px);
+        -ms-transform: rotate(-90deg);
+        transform: rotate(-90deg);
+    }
+
+    .custom-toggle.x .bar {
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+
+    .custom-toggle.x .bar:first-child {
+        -webkit-transform: rotate(-45deg);
+        -moz-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+    }
+
+    @media (max-width: 47.999em) {
+
+        .custom-menu-3 {
+            text-align: left;
+        }
+
+        .custom-toggle {
+            display: block;
+        }
+
+    }
+    </style>
 </head>
 <body>
-    HI, HERO TRY!
-    <table style='border:solid 1px blue;'>
+<div class="custom-wrapper pure-g" id="menu">
+    <div class="pure-u-1 pure-u-md-1-3">
+        <div class="pure-menu">
+            <a href="#" class="pure-menu-heading custom-brand">Brand</a>
+            <a href="#" class="custom-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
+        </div>
+    </div>
+    <div class="pure-u-1 pure-u-md-1-3">
+        <div class="pure-menu pure-menu-horizontal custom-can-transform">
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="pure-u-1 pure-u-md-1-3">
+        <div class="pure-menu pure-menu-horizontal custom-menu-3 custom-can-transform">
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Yahoo</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">W3C</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+    <!--<table style='border:solid 1px blue;'>
     <thead>
       <tr><th>屬性</th><th>值</th>
     </thead>
@@ -44,23 +155,64 @@
         <td id="timestamp"></td>
       </tr>
     </tbody>
-    </table>
+    </table>-->
     <div id="msg"></div>
     <div id="map-marker-01" style="width:500px;height:500px"></div>
     <script src="//code.jquery.com/jquery-2.1.4.min.js"> </script>
     <script src="http://app.essoduke.org/js/tinyMap/jquery.tinyMap-3.3.3.min.js"> </script>
     <script type="text/javascript">
+
+    (function (window, document) {
+    var menu = document.getElementById('menu'),
+        WINDOW_CHANGE_EVENT = ('onorientationchange' in window) ? 'orientationchange':'resize';
+
+    function toggleHorizontal() {
+        [].forEach.call(
+            document.getElementById('menu').querySelectorAll('.custom-can-transform'),
+            function(el){
+                el.classList.toggle('pure-menu-horizontal');
+            }
+        );
+    };
+
+    function toggleMenu() {
+        // set timeout so that the panel has a chance to roll up
+        // before the menu switches states
+        if (menu.classList.contains('open')) {
+            setTimeout(toggleHorizontal, 500);
+        }
+        else {
+            toggleHorizontal();
+        }
+        menu.classList.toggle('open');
+        document.getElementById('toggle').classList.toggle('x');
+    };
+
+    function closeMenu() {
+    console.log(WINDOW_CHANGE_EVENT);
+        if (menu.classList.contains('open')) {
+            toggleMenu();
+        }
+    }
+
+    document.getElementById('toggle').addEventListener('click', function (e) {
+        toggleMenu();
+    });
+
+    window.addEventListener(WINDOW_CHANGE_EVENT, closeMenu);
+    })(this, this.document);
+    
         if (window.navigator.geolocation) {
             var geo = navigator.geolocation;
             var option = {
                 enableAcuracy:true,
                 maximumAge:0,
                 timeout:600000};
-            geo.getCurrentPosition(
+            /*geo.getCurrentPosition(
                 successCallback,
                 errorCallback,
                 option
-            );
+            );*/
         }   else {
             $i("msg").innerHTML = "此瀏覽器不支援地理定位功能!";
         }
