--- a/case/index.html
+++ b/case/index.html
@@ -81,46 +81,46 @@
                                     夏季特賣
                                 </a>
                             </li>
-                        <!--<li class="dropdown">
-                            <a href="https://kkbruce.tw/bs3/Examples/navbar-fixed-top#" class="dropdown-toggle"
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle"
                             data-toggle="dropdown" role="button" aria-expanded="false">
-                                Dropdown
+                                下拉選單
                                 <span class="caret">
                                 </span>
                             </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>
-                                    <a href="https://kkbruce.tw/bs3/Examples/navbar-fixed-top#">
-                                        Action
+                                    <a href="#">
+                                        童裝
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://kkbruce.tw/bs3/Examples/navbar-fixed-top#">
-                                        Another action
+                                    <a href="#">
+                                        男裝
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://kkbruce.tw/bs3/Examples/navbar-fixed-top#">
-                                        Something else here
+                                    <a href="#">
+                                        女裝
                                     </a>
                                 </li>
                                 <li class="divider">
                                 </li>
                                 <li class="dropdown-header">
-                                    Nav header
+                                    sale a
                                 </li>
                                 <li>
-                                    <a href="https://kkbruce.tw/bs3/Examples/navbar-fixed-top#">
-                                        Separated link
+                                    <a href="#">
+                                        sale b
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://kkbruce.tw/bs3/Examples/navbar-fixed-top#">
-                                        One more separated link
+                                    <a href="#">
+                                        sale c
                                     </a>
                                 </li>
                             </ul>
-                        </li>-->
+                        </li>
                     </ul>
                     <!--<ul class="nav navbar-nav navbar-right">
                         <li>
